--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 PORT=3000
-BASE_URL=http://localhost:3000
+
+# URL publica para ngrok/dominio (troque facilmente quando mudar)
+PUBLIC_APP_URL=
+PUBLIC_BASE_URL=
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500,https://clubedojogo.app.br
 NODE_ENV=development
 SESSION_SECRET=troque-por-uma-chave-segura
 GOOGLE_ENABLED=false
