add: Achievements, like in comments and more features.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,33 @@
 PORT=3000
-
-# URL publica para ngrok/dominio (troque facilmente quando mudar)
-PUBLIC_APP_URL=
-PUBLIC_BASE_URL=
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500,https://clubedojogo.app.br
+HOST=127.0.0.1
 NODE_ENV=development
+BASE_URL=https://clubedojogo.app.br
+
+# URL publica do app (dominio em producao)
+PUBLIC_APP_URL=https://clubedojogo.app.br
+PUBLIC_BASE_URL=https://clubedojogo.app.br
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5500,http://127.0.0.1:5500,https://clubedojogo.app.br,https://www.clubedojogo.app.br
+
+# Proxy reverso (ex.: Caddy)
+# desenvolvimento: deixe vazio/false
+# producao: TRUST_PROXY=1
+TRUST_PROXY=
+
+# Cookies de sessao
+# SESSION_COOKIE_SECURE em producao deve ser true (HTTPS)
+SESSION_COOKIE_SECURE=
+SESSION_COOKIE_SAMESITE=lax
+# Exemplo de dominio: clubedojogo.app.br
+SESSION_COOKIE_DOMAIN=
+
 SESSION_SECRET=troque-por-uma-chave-segura
 GOOGLE_ENABLED=false
 GOOGLE_CLIENT_ID=seu-google-client-id
 GOOGLE_CLIENT_SECRET=seu-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+# RAWG (fallback de metadados por nome quando Steam nao retorna genero/ano)
+RAWG_API_KEY=
 
 # SMTP (opcional, mas necessario para envio real de email)
 SMTP_ENABLED=false
