checkpoint: safe checkpoint in code

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,8 @@ GOOGLE_CLIENT_ID=seu-google-client-id
 GOOGLE_CLIENT_SECRET=seu-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
-# RAWG (fallback de metadados por nome quando Steam nao retorna genero/ano)
+# RAWG (fallback/principal para metadados por nome em insercao manual)
+# Importante: manter creditos com hyperlink ativo para RAWG no site.
 RAWG_API_KEY=
 
 # SMTP (opcional, mas necessario para envio real de email)
