--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "psn-api": "^2.17.0",
     "sqlite3": "^5.0.2"
   }
 }
